@@ -1,30 +1,32 @@
 package com.bakdata.conquery.sql.conversion.cqelement.concept;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import com.bakdata.conquery.sql.conversion.model.QueryStep;
 import com.bakdata.conquery.sql.conversion.model.Selects;
+import com.bakdata.conquery.sql.conversion.model.SqlIdColumns;
 import com.bakdata.conquery.sql.conversion.model.select.SqlSelect;
 
-class AggregationSelectCte extends ConceptCte {
+class AggregationSelectCte extends ConnectorCte {
 
 	@Override
-	public QueryStep.QueryStepBuilder convertStep(ConceptCteContext conceptCteContext) {
+	public QueryStep.QueryStepBuilder convertStep(CQTableContext tableContext) {
 
-		List<SqlSelect> requiredInAggregationFilterStep = conceptCteContext.allConceptSelects()
-																		   .flatMap(sqlSelects -> sqlSelects.getForAggregationSelectStep().stream())
-																		   .distinct()
-																		   .collect(Collectors.toList());
+		String predecessor = tableContext.getConnectorTables().getPredecessor(ConceptCteStep.AGGREGATION_SELECT);
+		SqlIdColumns ids = tableContext.getIds().qualify(predecessor);
+
+		List<SqlSelect> requiredInAggregationFilterStep = tableContext.allSqlSelects().stream()
+																	  .flatMap(sqlSelects -> sqlSelects.getAggregationSelects().stream())
+																	  .toList();
 
 		Selects aggregationSelectSelects = Selects.builder()
-												  .primaryColumn(conceptCteContext.getPrimaryColumn())
+												  .ids(ids)
 												  .sqlSelects(requiredInAggregationFilterStep)
 												  .build();
 
 		return QueryStep.builder()
 						.selects(aggregationSelectSelects)
-						.groupBy(List.of(conceptCteContext.getPrimaryColumn()));
+						.groupBy(ids.toFields());
 	}
 
 	@Override
